--- a/app/design/frontend/base/default/layout/paymee.xml
+++ b/app/design/frontend/base/default/layout/paymee.xml
@@ -4,7 +4,7 @@
         <reference name="head">
             <action method="addItem">
                 <type>skin_css</type>
-                <name>css/juniormaia/paymee/styles.css</name>
+                <name>css/juniormaia/paymee/style.css</name>
                 <params/>
             </action>
         </reference>
@@ -13,7 +13,7 @@
         <reference name="head">
             <action method="addItem">
                 <type>skin_css</type>
-                <name>css/juniormaia/paymee/styles.css</name>
+                <name>css/juniormaia/paymee/style.css</name>
                 <params/>
             </action>
         </reference>
@@ -33,4 +33,12 @@
             <block type="checkout/onepage_success" name="checkout.success.paymee" template="juniormaia/paymee/success.phtml"/>
         </reference>
     </onepagecheckout_index_success>
+    <!--
+        <checkout_onepage_success>
+            <reference name="content">
+                <block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml" >
+                    <block type="core/template" name="checkout.success.paymee" template="juniormaia/paymee/success.phtml"/>
+                </block>
+            </reference>
+        </checkout_onepage_success> -->
 </layout>
