--- a/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
+++ b/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
@@ -3,40 +3,60 @@
     <?php
     $responsePaymee = json_decode($paymeeInstructions, true);
 
-    if(!array_key_exists('response', $responsePaymee)) {
-        die(__METHOD__);
-    }
-
-    $body =  $responsePaymee['response'];
-
-    if(!isset($body['instructions']) ||
-        empty($body['instructions']['beneficiary_branch'])) {
-        die(__METHOD__);
-    }
-
+    $body  =  $responsePaymee['response'];
     $steps = $body['instructions']['steps'];
     ?>
     <div class="instructions">
         <p><strong><h1>Dados para transferência</h1></strong></p>
         <ul>
-            <li><span>Banco: <strong><?php echo $body['instructions']['name'] ?></strong></span></li>
-            <li><span>Agência: <strong><?php echo $body['instructions']['beneficiary_branch'] ?></strong></span></li>
-            <li><span>Conta-Corrente: <strong><?php echo $body['instructions']['beneficiary_account'] ?></strong></span></li>
-            <li><span>Favorecido: <strong><?php echo $body['instructions']['beneficiary_name'] ?></strong></span></li>
-            <li><span>Valor: <strong>R$ <?php echo number_format($body['amount'], 2, ',', '.') ?></strong></span></li>
+            <?php if ($body['instructions']['name'] != 'PIX'): ?>
+                <li><span>Banco: <strong><?php echo $body['instructions']['name'] ?></strong></span></li>
+                <li><span>Agência: <strong><?php echo $body['instructions']['beneficiary_branch'] ?></strong></span></li>
+                <li><span>Conta-Corrente: <strong><?php echo $body['instructions']['beneficiary_account'] ?></strong></span></li>
+                <li><span>Favorecido: <strong><?php echo $body['instructions']['beneficiary_name'] ?></strong></span></li>
+                <li><span>Valor: <strong>R$ <?php echo number_format($body['amount'], 2, ',', '.') ?></strong></span></li>
+                <div class="advice">
+                    <span>Realize a transferência bancária no valor exato do seu pedido.</span>
+                </div>
+                <div class="buttons-set">
+                    <a type="button" title="<?php echo $this->__('IR PARA INTERNET BANKING') ?>" class="button"
+                       href="<?php echo $body['instructions']['redirect_urls']['desktop'] ?>" target="_blank">
+                        <span>
+                            <span>
+                                <?php echo $this->__('IR PARA INTERNET BANKING') ?>
+                            </span>
+                        </span>
+                    </a>
+                </div>
+            <?php else: ?>
+                <?php
+                $qrcode = $body['instructions']['qrCode']['url'];
+                $plain  = $body['instructions']['qrCode']['plain'];
+                ?>
+                <li><span>Apronte a câmera do seu celular para efetuar o pagamento</span></li>
+                <br>
+                <img
+                        id='barcode'
+                        class="paymee-img"
+                        src="https://api.qrserver.com/v1/create-qr-code/?data='<?php echo $qrcode; ?>'&amp;size=150x150"
+                        alt=""
+                        title="PayMee"
+                        width="150"
+                        height="150" />
+                <br>
+                <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>>" id="plain">
+                <button class="btn-paymee" onclick="copyPlain()">Copiar Código</button>
+            <?php endif; ?>
         </ul>
     </div>
-    <div class="advice">
-        <span>Realize a transferência bancária no valor exato do seu pedido.</span>
-    </div>
-    <div class="buttons-set">
-        <a type="button" title="<?php echo $this->__('IR PARA INTERNET BANKING') ?>" class="button"
-           href="<?php echo $body['instructions']['redirect_urls']['desktop'] ?>" target="_blank">
-            <span>
-                <span>
-                    <?php echo $this->__('IR PARA INTERNET BANKING') ?>
-                </span>
-            </span>
-        </a>
-    </div>
 </div>
+
+<script>
+    function copyPlain() {
+        var copyText = document.getElementById("plain");
+        copyText.select();
+        copyText.setSelectionRange(0, 99999)
+        document.execCommand("copy");
+        alert("Código copiado com sucesso!");
+    }
+</script>
