--- a/skin/frontend/base/default/css/juniormaia/paymee/style.css
+++ b/skin/frontend/base/default/css/juniormaia/paymee/style.css
@@ -72,19 +72,33 @@
     border-color: #0275d8;
     display: inline-block;
     font-weight: 400;
-    line-height: 1.25;
     text-align: center;
     white-space: nowrap;
-    vertical-align: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: .5rem 1rem;
+    padding: .3rem 1rem;
     font-size: 1rem;
     border-radius: .25rem;
     -webkit-transition: all .2s ease-in-out;
     -o-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
+    vertical-align: top;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.paymee-textBox {
+    display: none;
+}
+
+.paymee-img {
+    border: 0;
+    vertical-align: top;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
