--- a/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
+++ b/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
@@ -7,9 +7,14 @@
     $steps = $body['instructions']['steps'];
     ?>
     <div class="instructions">
-        <p><strong><h1>Dados para transferência</h1></strong></p>
-        <ul>
-            <?php if ($body['instructions']['name'] != 'PIX'): ?>
+        <?php if ($body['instructions']['name'] != 'PIX'): ?>
+            <h1>Dados para transferência</h1>
+        <?php else: ?>
+            <h1>Pagamento via PIX</h1>
+        <?php endif; ?>
+
+        <?php if ($body['instructions']['name'] != 'PIX'): ?>
+            <ul>
                 <li><span>Banco: <strong><?php echo $body['instructions']['name'] ?></strong></span></li>
                 <li><span>Agência: <strong><?php echo $body['instructions']['beneficiary_branch'] ?></strong></span></li>
                 <li><span>Conta-Corrente: <strong><?php echo $body['instructions']['beneficiary_account'] ?></strong></span></li>
@@ -28,36 +33,45 @@
                         </span>
                     </a>
                 </div>
-            <?php else: ?>
-                <?php
-                $qrcode = $body['instructions']['qrCode']['url'];
-                $plain  = $body['instructions']['qrCode']['plain'];
-                ?>
-                <li><span>Apronte a câmera do seu celular para efetuar o pagamento</span></li>
-                <br>
+            </ul>
+        <?php else: ?>
+            <?php
+            $qrcode = $body['instructions']['qrCode']['url'];
+            $plain  = $body['instructions']['qrCode']['plain'];
+            ?>
+            <div class="box-paymee">
                 <img
                         id='barcode'
-                        class="paymee-img"
+                        class="paymee-img-qr"
                         src="https://api.qrserver.com/v1/create-qr-code/?data='<?php echo $qrcode; ?>'&amp;size=200x200"
                         alt=""
                         title="PayMee"
                         width="200"
                         height="200" />
-                <br>
-                <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>>" id="plain">
-                <button class="btn-paymee" onclick="copyPlain()">Copiar Código</button>
-                <div class="buttons-set-pedidos">
-                    <a type="button" title="<?php echo $this->__('IR PARA MEUS PEDIDOS') ?>" class="button"
-                       href="<?php echo Mage::getUrl('customer/account/'); ?>" target="_blank">
+                <span class="qr-subtitle">Ler com seu aplicativo bancário</span>
+            </div>
+            <div class="box-paymee">
+                <img
+                        src="https://www.bcb.gov.br/content/estabilidadefinanceira/piximg/logo_pix.png"
+                        class="paymee-img-pix"
+                        width="500"
+                        height="200"
+                />
+            </div>
+
+            <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>>" id="plain">
+            <button class="btn-paymee" onclick="copyPlain()">Copiar Código</button>
+            <div class="buttons-set-pedidos">
+                <a type="button" title="<?php echo $this->__('IR PARA MEUS PEDIDOS') ?>" class="button"
+                   href="<?php echo Mage::getUrl('customer/account/'); ?>" target="_blank">
                         <span>
                             <span>
                                 <?php echo $this->__('IR PARA MEUS PEDIDOS') ?>
                             </span>
                         </span>
-                    </a>
-                </div>
-            <?php endif; ?>
-        </ul>
+                </a>
+            </div>
+        <?php endif; ?>
     </div>
 </div>
 
@@ -67,6 +81,6 @@
         copyText.select();
         copyText.setSelectionRange(0, 99999)
         document.execCommand("copy");
-        alert("Código copiado com sucesso!");
+        alert("Código para pagamento copiado com sucesso!");
     }
 </script>
