--- a/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
+++ b/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
@@ -3,10 +3,12 @@
     <?php
     $responsePaymee = json_decode($paymeeInstructions, true);
 
-    $body  =  $responsePaymee['response'];
-    $steps = $body['instructions']['steps'];
+    $body   =  $responsePaymee['response'];
+    $steps  = $body['instructions']['steps'];
+    $uuid   = $body['uuid'];
     ?>
     <div class="instructions">
+
         <?php if ($body['instructions']['name'] != 'PIX'): ?>
             <h1>Dados para transferência</h1>
         <?php else: ?>
@@ -54,12 +56,16 @@
                 <img
                         src="https://www.bcb.gov.br/content/estabilidadefinanceira/piximg/logo_pix.png"
                         class="paymee-img-pix"
-                        width="500"
-                        height="200"
+                        width="280"
+                        height="100"
                 />
             </div>
 
-            <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>>" id="plain">
+            <input type="text" class="paymee-textBox" value="<?php echo $body['instructions']['name']; ?>" id="paymee-method">
+            <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>" id="plain">
+            <input type="text" class="paymee-textBox" value="<?php echo $uuid; ?>" id="uuid">
+            <input type="text" class="paymee-textBox" value="<?php echo Mage::getUrl('paymee/checkout/checkPix', array('_secure' => true)); ?>" id="paymee-url">
+            <input type="text" class="paymee-textBox" value="<?php echo Mage::getUrl('customer/account/'); ?>" id="customer-url">
             <button class="btn-paymee" onclick="copyPlain()">Copiar Código</button>
             <div class="buttons-set-pedidos">
                 <a type="button" title="<?php echo $this->__('IR PARA MEUS PEDIDOS') ?>" class="button"
