Pix time and message

--- a/app/design/frontend/base/default/layout/paymee.xml
+++ b/app/design/frontend/base/default/layout/paymee.xml
@@ -3,6 +3,8 @@
     <checkout_onepage_index translate="label">
         <reference name="head">
             <action method="addItem"><type>skin_css</type><name>css/juniormaia/paymee/style.css</name><params/></action>
+            <action method="addItem"><type>skin_js</type><name>js/juniormaia/paymee/jquery/jquery.mask.latest.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>js/juniormaia/paymee/inputs.js</name></action>
         </reference>
     </checkout_onepage_index>
     <checkout_onepage_success>
