--- a/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
+++ b/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
@@ -71,7 +71,7 @@
 
             <div class="alert" id="alert">
                 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                <strong>Sucesso!</strong> Seu pagamento foi realizado!
+                <strong>Sucesso!</strong> Seu pagamento via PIX foi confirmado!
             </div>
         </div>
 
