Fixes and add payment method boleto

--- a/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
+++ b/app/design/frontend/base/default/template/juniormaia/paymee/success.phtml
@@ -1,21 +1,22 @@
 <div class="paymee-instructions">
+    <?php $orderId = $this->getOrderId(); ?>
+    <?php $order = Mage::getModel("sales/order")->loadByIncrementId($orderId); //load order by increment id?>
+    <?php $paymentCode = $order->getPayment()->getMethod(); ?>
     <?php $paymeeInstructions = Mage::getSingleton('core/session')->getData('paymee_instructions'); ?>
     <?php
     $responsePaymee = json_decode($paymeeInstructions, true);
     $body           =  $responsePaymee['response'];
     $steps          = $body['instructions']['steps'];
     $uuid           = $body['uuid'];
-    $qrcode         = $body['instructions']['qrCode']['url'];
-    $plain          = $body['instructions']['qrCode']['plain'];
     ?>
 
-    <input type="text" class="paymee-textBox" value="<?php echo $body['instructions']['chosen']; ?>" id="paymee-method">
-    <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>" id="plain">
+    <input type="text" class="paymee-textBox" value="<?php echo $paymentCode; ?>" id="paymee-method">
     <input type="text" class="paymee-textBox" value="<?php echo $uuid; ?>" id="uuid">
     <input type="text" class="paymee-textBox" value="<?php echo Mage::getUrl('paymee/checkout/checkPix', array('_secure' => true)); ?>" id="paymee-url">
     <input type="text" class="paymee-textBox" value="<?php echo Mage::getUrl('customer/account/'); ?>" id="customer-url">
+    <input type="text" class="paymee-textBox" value="<?php echo Mage::getUrl('paymee/checkout/uploadDocuments'); ?>" id="send-documents-boleto-url">
 
-    <?php if ($body['instructions']['chosen'] != 'PIX'): ?>
+    <?php if ($paymentCode == 'juniormaia_paymee_transfer'): ?>
         <div class="instructions">
             <h1>Dados para transferência</h1>
             <ul>
@@ -39,7 +40,13 @@
                 </div>
             </ul>
         </div>
-    <?php else: ?>
+    <?php endif ?>
+    <?php if ($paymentCode == 'juniormaia_paymee_pix'): ?>
+        <?php
+        $qrcode         = $body['instructions']['qrCode']['url'];
+        $plain          = $body['instructions']['qrCode']['plain'];
+        ?>
+        <input type="text" class="paymee-textBox" value="<?php echo $plain; ?>" id="plain">
         <div class="payment-pix">
             <div class="container" id="container">
                 <div class="box">
@@ -76,5 +83,44 @@
                 <strong>Sucesso!</strong> Seu pagamento foi realizado!
             </div>
         </div>
-    <?php endif; ?>
+    <?php endif ?>
+    <?php if ($paymentCode == 'juniormaia_paymee_boleto'): ?>
+        <div class="payment-boleto">
+            <div class="container" id="container">
+                <div class="box">
+                    <h1>Pagamento via Boleto</h1>
+                </div>
+
+                <div class="alert" id="alert-boleto">
+                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                    <strong>Sucesso!</strong> Em instantes você recebera os detalhes da sua proposta por email
+                </div>
+
+                <div class="box boleto">
+                    <span class="title"><strong>Anexe a documentação necessária!</strong></span>
+                </div>
+                <div class="box boleto">
+                    <span class="subtitles">Vamos precisar das seguintes imagens:</span>
+                </div>
+
+                <div class="box input-upload boleto">
+                    <span class="send-documents">Anexe uma foto do seu documento</span>
+                    <input id="file_upload_document" type="file" name="file_upload_document" />
+                </div>
+                <div class="box input-upload boleto">
+                    <span class="send-documents">Anexe uma selfie com qualidade</span>
+                    <input id="file_upload_selfie" type="file" name="file_upload_selfie" />
+                </div>
+            </div>
+            <div class="buttons-set boleto">
+                <a type="button" id="boleto_send_documents" title="<?php echo $this->__('Enviar Documentos') ?>" class="button" href="javascript:void(0)">
+                        <span>
+                            <span>
+                                <?php echo $this->__('Enviar Documentos') ?>
+                            </span>
+                        </span>
+                </a>
+            </div>
+        </div>
+    <?php endif ?>
 </div>
